@@ -397,6 +397,11 @@ public:
   operator-(difference_type) const noexcept;
   [[nodiscard]] inline difference_type
   operator-(const_row_iterator const &) const noexcept;
+
+  [[nodiscard]] inline field operator[](difference_type offset) const noexcept
+  {
+    return *(*this + offset);
+  }
   //@}
 };
 
@@ -486,6 +491,10 @@ public:
   operator-(const_reverse_row_iterator const &rhs) const noexcept
   {
     return rhs.const_row_iterator::operator-(*this);
+  }
+  [[nodiscard]] inline field operator[](difference_type offset) const noexcept
+  {
+    return *(*this + offset);
   }
   //@}
 
