@@ -5,6 +5,8 @@
  - Work around CMake 3.30 renaming one of its functions. (#851)
  - Remove obscure deprecated `stream_to` constructor that never worked. (#853)
  - Support reading a field as an SQL array using `as_sql_array()`. (#841)
+ - Make row iterator a _proper_ `random_access_iterator`. (#846)
+ - Downgrade result iterator to "bidirectional"; was never really RA. (#846)
 7.9.1
  - Fix bad conversion of array of empty strings to string. (#816)
  - Move `[[likely]]` feature check back to compile time, to speed up configure.
